04-mult: scripts: fix range for random number generation
random number generation needs to take the range -2^31 ~> 2^31-1. currently, the range takes the upper bound 2*31-1.

Signed-off-by: Karthik B K <bkkarthik01@gmail.com>

--- a/04-mult/scripts/mult_speed.ipynb
+++ b/04-mult/scripts/mult_speed.ipynb
@@ -91,8 +91,8 @@
     "inputs = []\n",
     "expout = []\n",
     "for i in range(N):\n",
-    "    a = randint(-2**31, 2*31-1)\n",
-    "    b = randint(-2**31, 2*31-1)\n",
+    "    a = randint(-2**31, 2**31-1)\n",
+    "    b = randint(-2**31, 2**31-1)\n",
     "    c = (a * b) & 0xFFFFFFFF\n",
     "    inputs.append(a)\n",
     "    inputs.append(b)\n",
