Qn4. what a lazy day

--- a/04-mult/scripts/mult_speed.ipynb
+++ b/04-mult/scripts/mult_speed.ipynb
@@ -9,9 +9,10 @@
    "source": [
     "# Basic imports.  Not all may be required.\n",
     "from pynq import Overlay\n",
-    "from pynq import allocate\n",
     "from pynq.ps import Clocks\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import random\n",
+    "import time"
    ]
   },
   {
@@ -93,7 +94,8 @@
     "for i in range(N):\n",
     "    a = randint(-2**31, 2**31-1)\n",
     "    b = randint(-2**31, 2**31-1)\n",
-    "    c = (a * b) & 0xFFFFFFFF\n",
+    "    # c = (a * b) & 0xFFFFFFFF\n",
+    "    c = (a*a + b*b) & 0xFFFFFFFF # Change to this to test squaring and adding\n",
     "    inputs.append(a)\n",
     "    inputs.append(b)\n",
     "    expout.append(c)\n",
@@ -115,7 +117,7 @@
     "# Set up clocks\n",
     "print(f\"CPU Clock frequency = {Clocks.cpu_mhz} MHz\")\n",
     "Clocks.fclk0_mhz=100\n",
-    "Clocks.fclk1_mhz=100\n",
+    "Clocks.fclk1_mhz=200\n",
     "print(f\"Set AXI clock to {Clocks.fclk0_mhz} MHz, PL clock to {Clocks.fclk1_mhz} MHz\")"
    ]
   },
